// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleSection renders ScheduleSection component when firstday slots  missed is 0 1`] = `
<div>
  <p
    class="medication-schedule-heading"
  >
    Medication Schedule
  </p>
  <div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule(s) (24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="09:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="13:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="17:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScheduleSection renders ScheduleSection component when firstday slots are missed 1`] = `
<div>
  <p
    class="medication-schedule-heading"
  >
    Medication Schedule
  </p>
  <div>
    <div
      class="schedule-info-notification"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
        />
        <path
          d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
        />
      </svg>
      <span>
        Any modifications in the timings will automatically update the remaining schedule for today.
      </span>
    </div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (start date, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="08:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="12:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="16:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (subsequent, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="09:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="13:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="17:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (remainder, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="10:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="14:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
